Refactor Material source methods from URI to URL